--- a/config/base/operator/deployment.yaml
+++ b/config/base/operator/deployment.yaml
@@ -1,17 +1,17 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: vault-operator
+  name: manager
   namespace: vault
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: vault-operator
+        name: manager
     spec:
       containers:
-      - name: vault-operator
+      - name: manager
         image: quay.io/coreos/vault-operator:latest
         env:
         - name: MY_POD_NAMESPACE
