--- a/config/base/operator/deployment.yaml
+++ b/config/base/operator/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: vault
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: manager
   template:
     metadata:
       labels:
