--- a/config/base/operator/deployment.yaml
+++ b/config/base/operator/deployment.yaml
@@ -13,6 +13,7 @@ spec:
       labels:
         name: manager
     spec:
+      serviceAccountName: vault-operator
       containers:
       - name: manager
         image: quay.io/coreos/vault-operator:latest
